@@ -22,7 +22,7 @@
 source "%LIBPROMETHEUS%" || exit 1
 
 # Usage: usage
-# Print help text.  FIXME: Define build.
+# Print help text.
 function usage {
 	cat <<-EOF
 Usage:
@@ -37,6 +37,7 @@ Package list:
 
 Options (must precede package list):
 -c, --config <config_file>	Specify alternative configuration file
+-s, --stage <stage_number>	Specify stage 0, 1 or 2 (default = 2)
 
 -h, -?, --help			Show this help screen
 -v, --version			Show version information
@@ -44,3 +45,56 @@ Options (must precede package list):
 	EOF
 	finish
 }
+
+# --------------------------- START EXECUTION HERE --------------------------- #
+
+# Check for options.
+while [[ "$1" == -* ]]; do
+	case "$1" in
+		(-c|--config)			config="$2"
+						shift ;;
+
+		(--config=*)			config="${1#--config=}" ;;
+
+		(-f|--profile|-p|--package)	break ;;
+
+		(-h|-\?|--help)			usage ;;
+
+		(-s|--stage)			set_stage "$2"
+						shift ;;
+
+		(--stage=*)			set_stage "${1#--stage=}" ;;
+
+		(-v|--version)			version ;;
+
+		(--)				shift
+						break ;;
+
+		(*)		script_usage_err "unrecognized option: $1"
+	esac
+	shift
+done
+
+source_config
+find_profiles "$@"
+
+# If there is more than one package, build each in its own instance.
+if (( ${#profile_list[@]} > 1 )); then
+	for profile in "${profile_list[@]}"; do
+		"$0" --config="$config" --stage=$stage --profile "$profile" ||
+		error "failed in $profile"
+	done
+	finish
+fi
+
+# There is only one package to build.  Do so in this instance.
+open_package "${profile_list[0]}"
+
+# If we have build commands, run them in the package's source directory.
+if is_func build_pkg; then
+	cd "$directory" &&
+	log build_pkg ||
+	error "building $name failed"
+fi
+
+finish
