@@ -17,3 +17,6 @@
 # You should have received a copy of the GNU General Public License along with
 # this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 # Place, Suite 330, Boston, MA  02111-1307  USA
+
+# FIXME: Some code from old pkgadd::build_package is needed here to initialize
+# install-log.
